- doc/bugs.txt: Updated to reflect recent bug fixes.  Contributed by Eero
  Tamminen. (RFB)
- bios/lineavars.S: Updated comments.  Contributed by Eero Tamminen. (RFB)
- vdi/vdi_line.c: Ignore lineA variable 'multifill' for linea_rect() and
  linea_polygon().  Contributed by Eero Tamminen. (RFB)
  
2015-03-27
- vdi/vdi_fill.c: Code cleanup, better comments.  Contributed by Eero
  Tamminen. (RFB)

2015-03-28
- aes/gemrslib.c: Reverted recent update, since it prevented a valid action
  (loading new-format RSC file but not subsequently accessing CICONs). (RFB)
- aes/gemfmalt.c: Cosmetic improvement: increased button spacing in alerts.
  Contributed by Eero Tamminen. (RFB)
- vdi/vdi_main.c: Remove unused array (saves 0.5K RAM). (RFB)

2015-03-29
- bios/aciavecs.S bios/vectors.S util/memset.S util/minicrt.S util/nlsasm.S
  util/setjmp.S: Use moveq instead of move.l when possible. (VRI)
- bdos/rwa.S: Use addq.l instead of add.l. (VRI)
- bios/aciavecs.S: Enable IKBD protocol even without ACIA hardware. (VRI)
- desk/deskpro.c desk/deskmain.c desk/desksupp.c: Code cleanup: make
  shel_write() 'isover' parameter explicitly 1 (no other value is
  supported). (RFB)
- aes/gemshlib.c: Remove PC-GEM-only stuff from shel_write(), improve
  comments. (RFB)
- aes/geminit.c aes/gemlib.h aes/gemshlib.c: Remove more PC-GEM-only
  stuff related to shel_write(). (RFB)

2015-03-30
- bdos/bdosmain.c bdos/fs.h bdos/fshand.h: Changed wrong Fdup() parameter from
  long to int. This fixes file not found issues with Steem hard disk emulation.
  Reported by Dima Sobolev. (VRI)
- aes/gemshlib.c: Remove sh_fixtail(), sh_parse(), no longer required. (RFB)
- aes/geminit.c: Remove residual PC-GEM-only code from sh_init(). (RFB)
- aes/gem.def aes/gem.rsc aes/gemshlib.c: Give the same error for a not-found
  autorun application as TOS does. (RFB)
- aes/gem.def aes/gem.rsc aes/gemshlib.c: Code cleanup: refactor sh_main()
  & sh_ldapp() for greater clarity. (RFB)